Update dist-golden to match; todo better tests

--- a/example/dist-golden/404.html
+++ b/example/dist-golden/404.html
@@ -7,46 +7,33 @@
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 		<title>Error 404</title>
 		<base href="/" />
-		<link href="/styles.css?cache=1718910064220" rel="stylesheet" />
-		<script src="/browser.js?cache=1718910064220" type="module"></script>
-		<script type="module">import { ErrorPage } from '/error-FZUFS3VU.js';</script>
-		<link href="/l-modalcontainer.css?cache=1718910064196" rel="stylesheet" />
-		<link href="/l-nav.css?cache=1718910064198" rel="stylesheet" />
+		<link href="/styles.css?cache=1726863456356" rel="stylesheet" />
+		<link
+			data-l-modalcontainer
+			data-l-nav
+			href="/404.html.css?cache=1726863456356"
+			rel="stylesheet"
+		/>
+		<script src="/browser.js?cache=1726863456356" type="module"></script>
+		<script type="module">import { ErrorPage } from '/error-TDCEI4AI.js';</script>
 	</head>
 	<body is="l-app">
 		<nav is="l-nav">
 			<ul>
-				<li id="nav-error404">
-					Active: 			<a href="/404.html">Go error404</a>
-				</li>
-				<li id="nav-external">
-					<a
+				<li id="nav-error404">			Active:
+					<a href="/404.html">Go error404</a>		</li>
+				<li id="nav-external">						<a
 						href="https://example.com/"
 						rel="noreferrer"
 						target="_blank"
-					>Go external</a>
-				</li>
-				<li id="nav-home">
-					<a href="/">Go home</a>
-				</li>
-				<li id="nav-homeJump1">
-					<a href="/#jump1">Go homeJump1</a>
-				</li>
-				<li id="nav-homeJump2">
-					<a href="/#jump2">Go homeJump2</a>
-				</li>
-				<li id="nav-ssgNo">
-					<a href="/ssg/no/">Go ssgNo</a>
-				</li>
-				<li id="nav-ssgYes">
-					<a href="/ssg/yes/">Go ssgYes</a>
-				</li>
-				<li id="nav-ssgYesJump1">
-					<a href="/ssg/yes/#jump1">Go ssgYesJump1</a>
-				</li>
-				<li id="nav-ssgYesJump2">
-					<a href="/ssg/yes/#jump2">Go ssgYesJump2</a>
-				</li>
+					>Go external</a>		</li>
+				<li id="nav-home">						<a href="/">Go home</a>		</li>
+				<li id="nav-homeJump1">						<a href="/#jump1">Go homeJump1</a>		</li>
+				<li id="nav-homeJump2">						<a href="/#jump2">Go homeJump2</a>		</li>
+				<li id="nav-ssgNo">						<a href="/ssg/no/">Go ssgNo</a>		</li>
+				<li id="nav-ssgYes">						<a href="/ssg/yes/">Go ssgYes</a>		</li>
+				<li id="nav-ssgYesJump1">						<a href="/ssg/yes/#jump1">Go ssgYesJump1</a>		</li>
+				<li id="nav-ssgYesJump2">						<a href="/ssg/yes/#jump2">Go ssgYesJump2</a>		</li>
 			</ul>
 		</nav>
 		<main data-page-title="Error 404" is="l-errorpage">
