--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -7,55 +7,36 @@
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 		<title>Home page</title>
 		<base href="/" />
-		<link href="/styles.css?cache=1718910064251" rel="stylesheet" />
+		<link href="/styles.css?cache=1726863543016" rel="stylesheet" />
 		<link
 			data-l-indexpage
-			data-l-modalcontainer
-			data-l-nav
-			data-l-textbox
+			data-l-progresscircle
 			data-l-progressmodal
+			data-l-textbox
 			data-l-transitiontest
-			data-l-indexpage
-			href="/index.html.css?cache=1718910064251"
+			href="/index.html.css?cache=1726863543016"
 			rel="stylesheet"
 		/>
-		<script src="/browser.js?cache=1718910064251" type="module"></script>
-		<script type="module">import { IndexPage } from '/pages-TSXAJQYJ.js';</script>
+		<script src="/browser.js?cache=1726863543016" type="module"></script>
+		<script type="module">import { IndexPage } from '/pages-4S2OAYG4.js';</script>
 	</head>
 	<body is="l-app">
 		<nav is="l-nav">
 			<ul>
-				<li id="nav-error404">
-					<a href="/404.html">Go error404</a>
-				</li>
-				<li id="nav-external">
-					<a
+				<li id="nav-error404">						<a href="/404.html">Go error404</a>		</li>
+				<li id="nav-external">						<a
 						href="https://example.com/"
 						rel="noreferrer"
 						target="_blank"
-					>Go external</a>
-				</li>
-				<li id="nav-home">
-					Active: 			<a href="/">Go home</a>
-				</li>
-				<li id="nav-homeJump1">
-					<a href="/#jump1">Go homeJump1</a>
-				</li>
-				<li id="nav-homeJump2">
-					<a href="/#jump2">Go homeJump2</a>
-				</li>
-				<li id="nav-ssgNo">
-					<a href="/ssg/no/">Go ssgNo</a>
-				</li>
-				<li id="nav-ssgYes">
-					<a href="/ssg/yes/">Go ssgYes</a>
-				</li>
-				<li id="nav-ssgYesJump1">
-					<a href="/ssg/yes/#jump1">Go ssgYesJump1</a>
-				</li>
-				<li id="nav-ssgYesJump2">
-					<a href="/ssg/yes/#jump2">Go ssgYesJump2</a>
-				</li>
+					>Go external</a>		</li>
+				<li id="nav-home">			Active:
+					<a href="/">Go home</a>		</li>
+				<li id="nav-homeJump1">						<a href="/#jump1">Go homeJump1</a>		</li>
+				<li id="nav-homeJump2">						<a href="/#jump2">Go homeJump2</a>		</li>
+				<li id="nav-ssgNo">						<a href="/ssg/no/">Go ssgNo</a>		</li>
+				<li id="nav-ssgYes">						<a href="/ssg/yes/">Go ssgYes</a>		</li>
+				<li id="nav-ssgYesJump1">						<a href="/ssg/yes/#jump1">Go ssgYesJump1</a>		</li>
+				<li id="nav-ssgYesJump2">						<a href="/ssg/yes/#jump2">Go ssgYesJump2</a>		</li>
 			</ul>
 		</nav>
 		<main
@@ -65,17 +46,17 @@
 			data-on-onlistdelete="onListDelete"
 			data-on-onlistinput="onListInput"
 			data-page-title="Home page"
-			id="UID7_"
+			id="UID3_"
 			is="l-indexpage"
 		>
 			<h1>Hello world!</h1>
-			<div is="l-transitiontest" style="background: rgb(255, 0, 0);"></div>
-			<button data-emit-click-uid7_="openModal" type="button">Modal</button>
+			<div is="l-transitiontest"></div>
+			<button data-emit-click-uid3_="openModal" type="button">Modal</button>
 			<div id="jump1">Jump 1</div>
 			<ol
-				data-emit-onlistadd-uid7_="onAdd"
-				data-emit-onlistdelete-uid7_="onDelete"
-				data-emit-onlistinput-uid7_="onInput"
+				data-emit-onlistadd-uid3_="onAdd"
+				data-emit-onlistdelete-uid3_="onDelete"
+				data-emit-onlistinput-uid3_="onInput"
 				data-on-click="click"
 				data-on-onlistitemdelete="onListItemDelete"
 				data-on-onlistiteminput="onListItemInput"
@@ -84,64 +65,64 @@
 			>
 				<li>List ID indexList</li>
 				<li
-					data-emit-onlistitemdelete-indexlist="onListDelete|UID5_"
-					data-emit-onlistiteminput-indexlist="onListInput|UID5_"
+					data-emit-onlistitemdelete-indexlist="onListDelete|UID1_"
+					data-emit-onlistiteminput-indexlist="onListInput|UID1_"
 					data-on-click="click"
 					data-on-oninput="onInput"
 					data-text="hello"
-					id="UID5_"
+					id="UID1_"
 					is="l-listitem"
 				>
-					<p>List item ID UID5_</p>
+					<p>List item ID UID1_</p>
 					<div
-						data-emit-oninput-uid5_="onListItemInput"
+						data-emit-oninput-uid1_="onListItemInput"
 						data-max="10"
 						data-on-input="input"
 						data-value="hello"
-						id="UID10_"
+						id="UID4_"
 						is="l-textbox"
 					>
 						<input
-							data-emit-input-uid10_="onInput"
+							data-emit-input-uid4_="onInput"
 							maxlength="10"
 							placeholder="Type here"
 							type="text"
 							value="hello"
 						/>
-						<span id="UID10_-remaining">	5 / 10 Remaining</span>
-						<p>textbox ID UID10_</p>
+						<span id="UID4_-remaining">	5 / 10 Remaining</span>
+						<p>textbox ID UID4_</p>
 					</div>
-					<button data-emit-click-uid5_="onListItemDelete" type="button">Remove</button>
+					<button data-emit-click-uid1_="onListItemDelete" type="button">Remove</button>
 				</li>
 				<li
-					data-emit-onlistitemdelete-indexlist="onListDelete|UID6_"
-					data-emit-onlistiteminput-indexlist="onListInput|UID6_"
+					data-emit-onlistitemdelete-indexlist="onListDelete|UID2_"
+					data-emit-onlistiteminput-indexlist="onListInput|UID2_"
 					data-on-click="click"
 					data-on-oninput="onInput"
 					data-text="world"
-					id="UID6_"
+					id="UID2_"
 					is="l-listitem"
 				>
-					<p>List item ID UID6_</p>
+					<p>List item ID UID2_</p>
 					<div
-						data-emit-oninput-uid6_="onListItemInput"
+						data-emit-oninput-uid2_="onListItemInput"
 						data-max="10"
 						data-on-input="input"
 						data-value="world"
-						id="UID12_"
+						id="UID5_"
 						is="l-textbox"
 					>
 						<input
-							data-emit-input-uid12_="onInput"
+							data-emit-input-uid5_="onInput"
 							maxlength="10"
 							placeholder="Type here"
 							type="text"
 							value="world"
 						/>
-						<span id="UID12_-remaining">	5 / 10 Remaining</span>
-						<p>textbox ID UID12_</p>
+						<span id="UID5_-remaining">	5 / 10 Remaining</span>
+						<p>textbox ID UID5_</p>
 					</div>
-					<button data-emit-click-uid6_="onListItemDelete" type="button">Remove</button>
+					<button data-emit-click-uid2_="onListItemDelete" type="button">Remove</button>
 				</li>
 				<li>
 					<button data-emit-click-indexlist="onListAdd" type="button">Add</button>
@@ -150,11 +131,9 @@
 			<div class="_swapText">
 				<h1>This should be in the source, not browser.</h1>
 			</div>
-			<p>
-				<a href="/ssg/yes/">Link to SSG Yes</a>
-			</p>
+			<p><a href="/ssg/yes/">Link to SSG Yes</a></p>
 			<p class="type-wtf">abc123</p>
-			<button data-emit-click-uid7_="anchorlessRoute" type="button">Go to SSG Yes</button>
+			<button data-emit-click-uid3_="anchorlessRoute" type="button">Go to SSG Yes</button>
 			<div id="jump2">Jump 2</div>
 			<div class="_bounce"></div>
 		</main>
