--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -7,48 +7,32 @@
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 		<title>SSG yes</title>
 		<base href="/" />
-		<link href="/styles.css?cache=1718910064262" rel="stylesheet" />
-		<link href="/ssg/yes/index.html.css?cache=1718910064262" rel="stylesheet" />
-		<script src="/browser.js?cache=1718910064262" type="module"></script>
-		<script type="module">import { YesSSGPage } from '/ssg-yes-I6V7B6M5.js';</script>
-		<style data-style="l-yesssgpage"></style>
-		<link href="/l-modalcontainer.css?cache=1718910064196" rel="stylesheet" />
-		<link href="/l-nav.css?cache=1718910064198" rel="stylesheet" />
+		<link href="/styles.css?cache=1726863456387" rel="stylesheet" />
+		<link
+			data-l-yesssgpage
+			href="/ssg/yes/index.html.css?cache=1726863456387"
+			rel="stylesheet"
+		/>
+		<script src="/browser.js?cache=1726863456387" type="module"></script>
+		<script type="module">import { YesSSGPage } from '/ssg-yes-AKJWUO2T.js';</script>
 	</head>
 	<body is="l-app">
 		<nav is="l-nav">
 			<ul>
-				<li id="nav-error404">
-					<a href="/404.html">Go error404</a>
-				</li>
-				<li id="nav-external">
-					<a
+				<li id="nav-error404">						<a href="/404.html">Go error404</a>		</li>
+				<li id="nav-external">						<a
 						href="https://example.com/"
 						rel="noreferrer"
 						target="_blank"
-					>Go external</a>
-				</li>
-				<li id="nav-home">
-					<a href="/">Go home</a>
-				</li>
-				<li id="nav-homeJump1">
-					<a href="/#jump1">Go homeJump1</a>
-				</li>
-				<li id="nav-homeJump2">
-					<a href="/#jump2">Go homeJump2</a>
-				</li>
-				<li id="nav-ssgNo">
-					<a href="/ssg/no/">Go ssgNo</a>
-				</li>
-				<li id="nav-ssgYes">
-					Active: 			<a href="/ssg/yes/">Go ssgYes</a>
-				</li>
-				<li id="nav-ssgYesJump1">
-					<a href="/ssg/yes/#jump1">Go ssgYesJump1</a>
-				</li>
-				<li id="nav-ssgYesJump2">
-					<a href="/ssg/yes/#jump2">Go ssgYesJump2</a>
-				</li>
+					>Go external</a>		</li>
+				<li id="nav-home">						<a href="/">Go home</a>		</li>
+				<li id="nav-homeJump1">						<a href="/#jump1">Go homeJump1</a>		</li>
+				<li id="nav-homeJump2">						<a href="/#jump2">Go homeJump2</a>		</li>
+				<li id="nav-ssgNo">						<a href="/ssg/no/">Go ssgNo</a>		</li>
+				<li id="nav-ssgYes">			Active:
+					<a href="/ssg/yes/">Go ssgYes</a>		</li>
+				<li id="nav-ssgYesJump1">						<a href="/ssg/yes/#jump1">Go ssgYesJump1</a>		</li>
+				<li id="nav-ssgYesJump2">						<a href="/ssg/yes/#jump2">Go ssgYesJump2</a>		</li>
 			</ul>
 		</nav>
 		<main data-page-title="SSG yes" is="l-yesssgpage">
